@@ -147,14 +147,13 @@ Feature-testing recommendations for C++</link>.
     </row>
 
     <row>
-      <?dbhtml bgcolor="#C8B0B0" ?>
       <entry> Library Fundamentals V1 TS Components: <code>memory_resource</code> </entry>
       <entry>
 	<link xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2016/p0220r1.html">
 	P0220R1
 	</link>
       </entry>
-      <entry align="center"> No </entry>
+      <entry align="center"> 9.1 </entry>
       <entry> <code>__has_include(&lt;memory_resource&gt;)</code>,
               <code>__cpp_lib_memory_resource >= 201603</code>
       </entry>
@@ -504,7 +503,7 @@ Feature-testing recommendations for C++</link>.
 	P0426R1
 	</link>
       </entry>
-      <entry align="center"> 8 </entry>
+      <entry align="center"> 8.1 </entry>
       <entry><code> __cpp_lib_constexpr_char_traits >= 201611 </code></entry>
     </row>
 
@@ -690,7 +689,7 @@ Feature-testing recommendations for C++</link>.
 	P0218R1
 	</link>
       </entry>
-      <entry align="center"> 8 </entry>
+      <entry align="center"> 8.1 </entry>
       <entry><code> __has_include(&lt;filesystem&gt;) </code>,
 	     <code> __cpp_lib_filesystem >= 201603 </code>
 	     (requires linking with <code>-lstdc++fs</code>)
@@ -704,7 +703,7 @@ Feature-testing recommendations for C++</link>.
 	P0219R1
 	</link>
       </entry>
-      <entry align="center"> 8 </entry>
+      <entry align="center"> 8.1 </entry>
       <entry><code> __cpp_lib_filesystem >= 201606 </code></entry>
     </row>
 
@@ -715,7 +714,7 @@ Feature-testing recommendations for C++</link>.
 	P0392R0
 	</link>
       </entry>
-      <entry align="center"> 8 </entry>
+      <entry align="center"> 8.1 </entry>
       <entry><code> __cpp_lib_filesystem >= 201606 </code></entry>
     </row>
 
@@ -726,7 +725,7 @@ Feature-testing recommendations for C++</link>.
        P0317R1
        </link>
       </entry>
-      <entry align="center"> 8 </entry>
+      <entry align="center"> 8.1 </entry>
       <entry><code> __cpp_lib_filesystem >= 201703 </code></entry>
      </row>
 
@@ -783,7 +782,7 @@ Feature-testing recommendations for C++</link>.
 	P0067R5
 	</link>
       </entry>
-      <entry align="center"> 8 (only integral types supported) </entry>
+      <entry align="center"> 8.1 (only integral types supported) </entry>
       <entry><code> __has_include(&lt;charconv&gt;) </code>
              <code> __cpp_lib_to_chars >= 201611 </code></entry>
     </row>
@@ -939,7 +938,10 @@ and test for <code>__STDCPP_MATH_SPEC_FUNCS__ >= 201003L</code>.
 	</link>
       </entry>
       <entry> Merge Fundamentals V1 into V2 </entry>
-      <entry>N</entry>
+      <entry>
+        N (components from V1 are still in namespace
+        <code>fundamentals_v1</code>)
+      </entry>
       <entry>Library Fundamentals 2 TS</entry>
     </row>
 
