@@ -1,3 +1,8 @@
+2018-11-28  Jonathan Wakely  <jwakely@redhat.com>
+
+	* doc/xml/manual/status_cxx2017.xml: Update C++17 status.
+	* doc/html/*: Regenerate.
+
 2018-11-27  Jonathan Wakely  <jwakely@redhat.com>
 
 	* testsuite/27_io/filesystem/operations/canonical.cc: Remove
